@@ -1,3 +1,14 @@
+2012-03-14  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r110559.
+        http://trac.webkit.org/changeset/110559
+        https://bugs.webkit.org/show_bug.cgi?id=81142
+
+        Broke Dromaeo tests (Requested by rniwa on #webkit).
+
+        * Dromaeo/resources/dromaeorunner.js:
+        (.):
+
 2012-03-13  Kentaro Hara  <haraken@chromium.org>
 
         Dromaeo perf-tests results are wrong
